--- a/investment-reports/report1.html
+++ b/investment-reports/report1.html
@@ -557,4 +557,26 @@
         });
     </script>
 </body>
+<!-- 戻るボタン - <body>タグの直後に追加 -->
+    <div style="position: fixed; top: 20px; left: 20px; z-index: 1000;">
+        <a href="/" style="
+            display: inline-flex;
+            align-items: center;
+            padding: 10px 20px;
+            background: #2a5298;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            transition: all 0.3s ease;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+        " onmouseover="this.style.background='#1e3c72'" 
+           onmouseout="this.style.background='#2a5298'">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="margin-right: 8px;">
+                <path d="M19 12H5m7-7l-7 7 7 7"/>
+            </svg>
+            レポート一覧へ
+        </a>
+    </div>
 </html> 
